Add button in Vikunja iFrame to set task as done
